Renamed plugin_*.js to plugin.js for universal entry points, made manifest.data_fields.custom an object for storage

--- a/bin/plugins/example/manifest.json
+++ b/bin/plugins/example/manifest.json
@@ -8,9 +8,9 @@
       "ExampleDataField2",
       "TelegramUsername"
     ],
-    "custom": [
-      "api_key",
-      "api_secret"
-    ]
+    "custom": {
+      "api_key": "THISISTHEAPIKEY0123546789",
+      "api_secret": "VERYLONGOBFUSCATEDAPISECRET9876543210"
+    }
   }
 }
