--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "common-errors": "~1.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
-    "common-errors": "~1.0.2"
+    "winston": "^2.4.0"
   }
 }
