Added new PluginManager object :cool:

--- a/user_settings.json
+++ b/user_settings.json
@@ -3,5 +3,7 @@
     "host": "localhost",
     "user": "root",
     "password": ""
-  }
+  },
+
+  "plugin_directory": "C:\\Users\\calmc\\Source\\Repos\\voluble\\bin\\plugins"
 }
