--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.15.5",
     "mariasql": "^0.2.6",
     "q": "^1.5.1",
+    "sequelize": "^4.23.2",
     "winston": "^2.4.0"
   }
 }
