Added setup for test DB

--- a/user_settings.json
+++ b/user_settings.json
@@ -3,7 +3,7 @@
     "host": "localhost",
     "user": "root",
     "password": "",
-    "db": "voluble"
+    "db": "voluble_test"
   },
 
   "plugin_directory": "C:\\Users\\calmc\\Source\\Repos\\voluble\\bin\\plugins"
