--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "~1.17.1",
     "common-errors": "^1.0.5",
     "debug": "~2.6.3",
