--- a/user_settings_local.json
+++ b/user_settings_local.json
@@ -1,4 +1,4 @@
-{
+    {
   "db_credentials": {
     "host": "jnc6n3xpbgc3kek2.chr7pe7iynqr.eu-west-1.rds.amazonaws.com",
     "user": "leqi81531zdoqocx",
@@ -6,5 +6,5 @@
     "db": "yvhd8s4h9nllpngt"
   },
   
-  "plugin_directory": "bin/plugins"
+  "plugin_directory": "C:\\Users\\calmc\\Source\\Repos\\voluble\\bin\\plugins"
 }
