Switch esendex sensitive info to config vars

--- a/bin/plugins/esendex/manifest.json
+++ b/bin/plugins/esendex/manifest.json
@@ -2,15 +2,9 @@
   "plugin_name": "Esendex",
   "plugin_description": "This is what my plugin does!",
   "npm_modules": [
-    "esendex",
-    "Q"
+    "esendex"
   ],
   "data_fields": {
-    "contact": [],
-    "custom": {
-      "esendex_username": "iamauser",
-      "esendex_password": "correcthorsebatterystaple",
-      "esendex_accountref": "EX0000000"
-    }
+    "contact": []
   }
 }
