--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node dist/app.js"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -15,12 +15,17 @@
     "express": "^4.15.5",
     "mariasql": "^0.2.6",
     "mysql2": "^1.5.1",
-    "q": "^1.5.1",
     "sequelize": "^4.23.2",
+    "typedoc": "^0.9.0",
     "winston": "^2.4.0"
   },
   "description": "A plugin-oriented mass text communication system",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node-common-errors": "^0.4.2",
+    "@types/bluebird": "^3.5.19",
+    "@types/express": "^4.11.0",
+    "@types/sequelize": "^4.27.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/calmcl1/voluble.git"
