--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/app.js"
   },
   "dependencies": {
+    "@types/winston": "^2.3.7",
     "bluebird": "^3.5.1",
     "body-parser": "~1.17.1",
     "common-errors": "^1.0.5",
@@ -15,16 +16,16 @@
     "express": "^4.15.5",
     "mariasql": "^0.2.6",
     "mysql2": "^1.5.1",
-    "sequelize": "^4.23.2",
-    "telegram-mtproto": "^2.2.2",
+    "sequelize": "^4.32.2",
+    "telegram-mtproto": "^2.2.8",
     "typedoc": "^0.9.0",
     "winston": "^2.4.0"
   },
   "description": "A plugin-oriented mass text communication system",
   "devDependencies": {
-    "@types/node-common-errors": "^0.4.2",
-    "@types/bluebird": "^3.5.19",
+    "@types/bluebird": "^3.5.20",
     "@types/express": "^4.11.0",
+    "@types/node-common-errors": "^0.4.2",
     "@types/sequelize": "^4.27.4"
   },
   "repository": {
