--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.15.5",
     "mariasql": "^0.2.6",
     "mysql2": "^1.5.1",
+    "node-telegram-bot-api": "^0.30.0",
     "sequelize": "^4.32.2",
     "telegram-mtproto": "^2.2.8",
     "typedoc": "^0.9.0",
@@ -26,6 +27,7 @@
     "@types/bluebird": "^3.5.20",
     "@types/express": "^4.11.0",
     "@types/node-common-errors": "^0.4.2",
+    "@types/node-telegram-bot-api": "^0.28.2",
     "@types/sequelize": "^4.27.4"
   },
   "repository": {
