Changed 'data_tables' layout

--- a/src/bin/plugins/telegram/manifest.json
+++ b/src/bin/plugins/telegram/manifest.json
@@ -2,10 +2,8 @@
   "plugin_name": "Telegram",
   "plugin_description": "Implements an interface to the Telegram service",
   "npm_modules": [],
-  "data_tables": {
-    "contact": {
-      "ExampleDataField1": "number",
-      "ExampleDataField2": "string"
-    }
-  }
+  "data_tables": [
+    "contacts",
+    "messages"
+  ]
 }
