--- a/src/bin/plugins/example/manifest.json
+++ b/src/bin/plugins/example/manifest.json
@@ -3,10 +3,10 @@
   "plugin_description": "This is what my plugin does!",
   "npm_modules": [],
   "data_tables": {
-    "contact": {
-      "ExampleDataField1": "number",
-      "ExampleDataField2": "string"
-    },
+    "contact": [
+      "ExampleDataField1",
+      "ExampleDataField2"
+    ],
     "custom": {
       "api_key": "THISISTHEAPIKEY0123546789",
       "api_secret": "VERYLONGOBFUSCATEDAPISECRET9876543210"
