--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/app.js"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^7.2.5",
     "@types/request-promise": "^4.1.41",
     "@types/winston": "^2.3.7",
     "bluebird": "^3.5.1",
@@ -15,6 +16,7 @@
     "debug": "~2.6.3",
     "esendex": "^0.1.8",
     "express": "^4.15.5",
+    "jsonwebtoken": "^8.2.0",
     "mariasql": "^0.2.6",
     "mysql2": "^1.5.1",
     "request": "^2.83.0",
