--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^1.5.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
+    "rsmq": "^0.8.3",
     "sequelize": "^4.32.2",
     "telegram-mtproto": "^2.2.8",
     "typedoc": "^0.9.0",
