--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node dist/app.js"
+    "start-server": "node dist/server-main.js",
+    "start-worker": "node dist/worker-main.js"
   },
   "dependencies": {
     "@types/jsonwebtoken": "^7.2.5",
