--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start-server": "node dist/server-main.js",
-    "start-worker": "node dist/worker-main.js"
+    "start-server": "node dist/server/server-main.js",
+    "start-worker": "node dist/worker/worker-main.js"
   },
   "dependencies": {
     "@types/jsonwebtoken": "^7.2.5",
