--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^7.2.5",
     "@types/request-promise": "^4.1.41",
+    "@types/rsmq-worker": "^0.3.28",
     "@types/winston": "^2.3.7",
     "bluebird": "^3.5.1",
     "body-parser": "~1.17.1",
@@ -22,7 +23,8 @@
     "mysql2": "^1.5.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "rsmq": "^0.8.3",
+    "rsmq-promise": "^1.0.1",
+    "rsmq-worker": "^0.5.2",
     "sequelize": "^4.32.2",
     "telegram-mtproto": "^2.2.8",
     "typedoc": "^0.9.0",
@@ -34,6 +36,7 @@
     "@types/express": "^4.11.0",
     "@types/node-common-errors": "^0.4.2",
     "@types/node-telegram-bot-api": "^0.28.2",
+    "@types/rsmq": "^0.3.27",
     "@types/sequelize": "^4.27.4"
   },
   "repository": {
