--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start-worker": "node dist/worker/worker-main.js"
   },
   "dependencies": {
+    "@types/auth0": "^2.9.0",
     "@types/jsonwebtoken": "^7.2.5",
     "@types/request-promise": "^4.1.41",
     "@types/rsmq-worker": "^0.3.28",
     "@types/winston": "^2.3.7",
+    "auth0": "^2.9.1",
     "bluebird": "^3.5.1",
     "body-parser": "~1.17.1",
     "common-errors": "^1.0.5",
