--- a/package.json
+++ b/package.json
@@ -8,38 +8,38 @@
     "start-worker": "node dist/worker/worker-main.js"
   },
   "dependencies": {
-    "@types/auth0": "^2.9.0",
-    "@types/jsonwebtoken": "^7.2.5",
+    "@types/auth0": "^2.9.3",
+    "@types/jsonwebtoken": "^7.2.7",
     "@types/request-promise": "^4.1.41",
     "@types/rsmq-worker": "^0.3.28",
-    "@types/winston": "^2.3.7",
-    "auth0": "^2.9.1",
+    "@types/winston": "^2.3.9",
+    "auth0": "^2.10.0",
     "bluebird": "^3.5.1",
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.18.3",
     "common-errors": "^1.0.5",
     "debug": "~2.6.3",
     "esendex": "^0.1.8",
-    "express": "^4.15.5",
-    "jsonwebtoken": "^8.2.0",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mariasql": "^0.2.6",
-    "mysql2": "^1.5.1",
-    "request": "^2.83.0",
+    "mysql2": "^1.5.3",
+    "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "rsmq-promise": "^1.0.1",
     "rsmq-worker": "^0.5.2",
-    "sequelize": "^4.32.2",
+    "sequelize": "^4.38.0",
     "telegram-mtproto": "^2.2.8",
     "typedoc": "^0.9.0",
-    "winston": "^2.4.0"
+    "winston": "^2.4.3"
   },
   "description": "A plugin-oriented mass text communication system",
   "devDependencies": {
     "@types/bluebird": "^3.5.20",
-    "@types/express": "^4.11.0",
+    "@types/express": "^4.16.0",
     "@types/node-common-errors": "^0.4.2",
-    "@types/node-telegram-bot-api": "^0.28.2",
+    "@types/node-telegram-bot-api": "^0.28.4",
     "@types/rsmq": "^0.3.27",
-    "@types/sequelize": "^4.27.4"
+    "@types/sequelize": "^4.27.23"
   },
   "repository": {
     "type": "git",
