--- a/src/plugins/esendex/manifest.json
+++ b/src/plugins/esendex/manifest.json
@@ -3,13 +3,9 @@
   "plugin_description": "Sends an SMS using Esendex",
   "npm_modules": [],
   "data_tables": {
-    "contact": [
-      "ExampleDataField1",
-      "ExampleDataField2"
-    ],
-    "custom": {
-      "api_key": "THISISTHEAPIKEY0123546789",
-      "api_secret": "VERYLONGOBFUSCATEDAPISECRET9876543210"
-    }
+    "organization":[
+      "organization_id",
+      "esendex_acct_ref"
+    ]
   }
 }
