--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "~2.6.3",
     "esendex": "^0.1.8",
     "express": "^4.16.3",
+    "express-xml-bodyparser": "^0.3.0",
     "jsend": "^1.0.2",
     "jsonwebtoken": "^8.3.0",
     "mariasql": "^0.2.6",
