--- a/package.json
+++ b/package.json
@@ -8,12 +8,6 @@
     "start-worker": "node dist/worker/worker-main.js"
   },
   "dependencies": {
-    "@types/auth0": "^2.9.3",
-    "@types/jsend": "^1.0.28",
-    "@types/jsonwebtoken": "^7.2.7",
-    "@types/request-promise": "^4.1.42",
-    "@types/rsmq-worker": "^0.3.28",
-    "@types/winston": "^2.3.9",
     "auth0": "^2.10.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
@@ -32,16 +26,22 @@
     "rsmq-worker": "^0.5.2",
     "sequelize": "^4.38.0",
     "telegram-mtproto": "^2.2.8",
-    "typedoc": "^0.9.0",
     "winston": "^2.4.3"
   },
   "description": "A plugin-oriented mass text communication system",
   "devDependencies": {
+    "@types/auth0": "^2.9.3",
+    "@types/jsend": "^1.0.28",
+    "@types/jsonwebtoken": "^7.2.7",
+    "@types/request-promise": "^4.1.42",
+    "@types/rsmq-worker": "^0.3.28",
+    "@types/winston": "^2.3.9",
     "@types/bluebird": "^3.5.20",
     "@types/express": "^4.16.0",
     "@types/node-telegram-bot-api": "^0.28.4",
     "@types/rsmq": "^0.3.27",
-    "@types/sequelize": "^4.27.23"
+    "@types/sequelize": "^4.27.23",
+    "typedoc": "^0.9.0"
   },
   "repository": {
     "type": "git",
