--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./dist/server/server-main.js",
+    "postinstall": "tsc",
     "start-server": "node ./dist/server/server-main.js",
     "start-worker": "node ./dist/worker/worker-main.js"
   },
@@ -32,16 +33,17 @@
   "description": "A plugin-oriented mass text communication system",
   "devDependencies": {
     "@types/auth0": "^2.9.3",
-    "@types/jsend": "^1.0.28",
-    "@types/jsonwebtoken": "^7.2.7",
-    "@types/request-promise": "^4.1.42",
-    "@types/rsmq-worker": "^0.3.28",
-    "@types/winston": "^2.3.9",
     "@types/bluebird": "^3.5.20",
     "@types/express": "^4.16.0",
+    "@types/jsend": "^1.0.28",
+    "@types/jsonwebtoken": "^7.2.7",
     "@types/node-telegram-bot-api": "^0.28.4",
+    "@types/request-promise": "^4.1.42",
     "@types/rsmq": "^0.3.27",
+    "@types/rsmq-worker": "^0.3.28",
     "@types/sequelize": "^4.27.23",
+    "@types/winston": "^2.3.9",
+    "tsc": "^1.20150623.0",
     "typedoc": "^0.9.0"
   },
   "repository": {
