--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./dist/server/server-main.js",
-    "postinstall": "tsc",
+    "postinstall": "tsc -v; tsc",
     "start-server": "node ./dist/server/server-main.js",
     "start-worker": "node ./dist/worker/worker-main.js"
   },
