--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "@types/rsmq-worker": "^0.3.28",
     "@types/sequelize": "^4.27.23",
     "@types/winston": "^2.3.9",
-    "tsc": "^1.20150623.0",
-    "typedoc": "^0.9.0"
+    "typedoc": "^0.9.0",
+    "typescript": "^3.1.6"
   },
   "repository": {
     "type": "git",
