--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "debug": "~2.6.3",
     "esendex": "^0.1.8",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^1.0.0",
     "express-xml-bodyparser": "^0.3.0",
     "jsend": "^1.0.2",
     "jsonwebtoken": "^8.3.0",
+    "jwks-rsa": "^1.3.0",
     "mariasql": "^0.2.6",
     "mysql2": "^1.5.3",
     "request": "^2.88.0",
