--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^1.0.0",
     "express-xml-bodyparser": "^0.3.0",
+    "google-libphonenumber": "^3.2.1",
     "jsend": "^1.0.2",
     "jsonwebtoken": "^8.3.0",
     "jwks-rsa": "^1.3.0",
@@ -42,6 +43,7 @@
     "@types/chai-as-promised": "^7.1.0",
     "@types/express": "^4.16.0",
     "@types/faker": "^4.1.4",
+    "@types/google-libphonenumber": "^7.4.17",
     "@types/jsend": "^1.0.28",
     "@types/jsonwebtoken": "^7.2.7",
     "@types/mocha": "^5.2.5",
