--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/bluebird": "^3.5.20",
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/faker": "^4.1.4",
     "@types/google-libphonenumber": "^7.4.17",
@@ -52,11 +53,14 @@
     "@types/rsmq": "^0.3.27",
     "@types/rsmq-worker": "^0.3.28",
     "@types/sequelize": "^4.27.23",
+    "@types/supertest": "^2.0.7",
     "@types/winston": "^2.3.9",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "dotenv": "^6.1.0",
     "faker": "^4.1.0",
     "mocha": "^5.2.0",
+    "supertest": "^3.3.0",
     "typedoc": "^0.9.0",
     "typescript": "^3.1.6"
   },
