--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "allowJs": true,
     "checkJs": true,
     "outDir": "./dist",
-    "removeComments": false,
+    "removeComments": true,
     "strict": false,
     "rootDir": "src"
   },
