--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node ./dist/server/server-main.js",
+    "start": "node ./dist/server/index.js",
     "postinstall": "tsc -v; tsc",
     "test": "mocha dist/test",
-    "start-server": "node ./dist/server/server-main.js",
+    "start-server": "node ./dist/server/index.js",
     "start-worker": "node ./dist/worker/worker-main.js"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "common-errors": "^1.0.5",
+    "cors": "^2.8.5",
     "debug": "~2.6.3",
     "esendex": "^0.1.8",
     "express": "^4.16.3",
@@ -41,6 +42,7 @@
     "@types/bluebird": "^3.5.20",
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/faker": "^4.1.4",
