--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "auth0": "^2.20.0",
-    "bluebird": "^3.5.3",
-    "body-parser": "^1.18.3",
+    "bluebird": "^3.7.1",
+    "body-parser": "^1.19.0",
     "common-errors": "^1.0.5",
     "cors": "^2.8.5",
     "debug": "~2.6.3",
@@ -22,40 +22,42 @@
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^2.3.1",
     "express-xml-bodyparser": "^0.3.0",
-    "google-libphonenumber": "^3.2.2",
-    "jsend": "^1.0.2",
+    "google-libphonenumber": "^3.2.6",
+    "jsend": "^1.1.0",
     "jwks-rsa": "^1.6.0",
     "mariasql": "^0.2.6",
-    "mysql2": "^1.6.4",
+    "mysql2": "^1.7.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2",
-    "rsmq-promise": "^1.0.3",
+    "request-promise": "^4.2.5",
+    "request-promise-native": "^1.0.8",
+    "rsmq-promise": "^1.0.4",
     "rsmq-worker": "^0.5.2",
     "sequelize": "^4.44.3",
     "telegram-mtproto": "^2.2.8",
-    "voluble-common": "git+https://github.com/calmcl1/voluble-common.git#1.2.1",
+    "voluble-common": "git+https://github.com/calmcl1/voluble-common.git#1.2.3",
     "winston": "^2.4.4"
   },
   "description": "A plugin-oriented mass text communication system",
   "devDependencies": {
-    "@types/auth0": "^2.9.7",
-    "@types/auth0-js": "^8.11.8",
-    "@types/bluebird": "^3.5.20",
-    "@types/chai": "^4.1.7",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/cors": "^2.8.4",
-    "@types/dotenv": "^6.1.0",
-    "@types/express": "^4.16.0",
-    "@types/faker": "^4.1.4",
+    "@types/auth0": "^2.9.23",
+    "@types/auth0-js": "^8.11.12",
+    "@types/bluebird": "^3.5.29",
+    "@types/chai": "^4.2.5",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.2",
+    "@types/faker": "^4.1.7",
     "@types/google-libphonenumber": "^7.4.17",
     "@types/jsend": "^1.0.28",
     "@types/jsonwebtoken": "^7.2.8",
-    "@types/mocha": "^5.2.5",
+    "@types/mocha": "^5.2.7",
     "@types/node-telegram-bot-api": "^0.28.4",
-    "@types/request-promise": "^4.1.42",
+    "@types/request-promise": "^4.1.45",
+    "@types/request-promise-native": "^1.0.17",
     "@types/rsmq": "^0.3.27",
-    "@types/sequelize": "^4.27.33",
-    "@types/supertest": "^2.0.7",
+    "@types/sequelize": "^4.28.7",
+    "@types/supertest": "^2.0.8",
     "@types/winston": "^2.4.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -63,9 +65,9 @@
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^5.2.0",
-    "supertest": "^3.3.0",
+    "supertest": "^3.4.2",
     "typedoc": "^0.9.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.7.2"
   },
   "repository": {
     "type": "git",
