--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0-a1",
   "private": true,
   "main": "app.js",
+  "engines": {
+    "node": "13.0.1"
+  },
   "scripts": {
     "start": "node ./dist/server/index.js",
     "postinstall": "tsc -v; tsc",
