apparently we do need mysql2

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "google-libphonenumber": "^3.2.6",
     "jsend": "^1.1.0",
     "jwks-rsa": "^1.6.0",
+    "mysql2": "^2.0.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "request-promise-native": "^1.0.8",
