add user field to contacts, for sent_by

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "rsmq-worker": "^0.5.2",
     "sequelize": "^4.44.3",
     "telegram-mtproto": "^2.2.8",
-    "voluble-common": "git+https://github.com/calmcl1/voluble-common.git#1.2.4",
+    "voluble-common": "git+https://github.com/calmcl1/voluble-common.git",
     "winston": "^3.2.1"
   },
   "description": "A plugin-oriented mass text communication system",
