--- a/package.json
+++ b/package.json
@@ -8,68 +8,65 @@
   },
   "scripts": {
     "start": "node ./dist/server/index.js",
-    "postinstall": "tsc -v; tsc",
+    "postinstall": "tsc -v ; tsc",
     "test-tap": "mocha dist/test --exit --reporter tap",
-    "test": "mocha dist/test --exit",
+    "test": "mocha dist/test --exit --full-trace --bail",
     "start-server": "node ./dist/server/index.js",
     "start-worker": "node ./dist/worker/worker-main.js"
   },
   "dependencies": {
-    "auth0": "^2.20.0",
+    "auth0": "^2.24.0",
+    "axios": "^0.19.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "debug": "~2.6.3",
     "esendex": "^0.1.8",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^2.3.1",
     "express-xml-bodyparser": "^0.3.0",
-    "google-libphonenumber": "^3.2.6",
+    "google-libphonenumber": "^3.2.7",
+    "jose": "^1.25.0",
     "jsend": "^1.1.0",
-    "jwks-rsa": "^1.6.0",
-    "mysql2": "^2.0.2",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.5",
-    "request-promise-native": "^1.0.8",
-    "rsmq-promise": "^1.0.4",
-    "rsmq-worker": "^0.5.2",
-    "sequelize": "^4.44.3",
-    "telegram-mtproto": "^2.2.8",
+    "jwks-rsa": "^1.7.0",
+    "mysql2": "^2.1.0",
+    "rsmq": "^0.12.0",
+    "sequelize": "^5.21.5",
+    "telegram-mtproto": "^1.0.5",
+    "validator": "^12.2.0",
     "voluble-common": "git+https://github.com/calmcl1/voluble-common.git",
     "winston": "^3.2.1"
   },
   "description": "A plugin-oriented mass text communication system",
   "devDependencies": {
-    "@types/auth0": "^2.9.23",
-    "@types/auth0-js": "^8.11.12",
-    "@types/bluebird": "^3.5.29",
-    "@types/chai": "^4.2.5",
+    "@types/auth0": "^2.20.0",
+    "@types/auth0-js": "^9.12.4",
+    "@types/bluebird": "^3.5.30",
+    "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/cors": "^2.8.6",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.17.2",
-    "@types/faker": "^4.1.8",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.3",
+    "@types/faker": "^4.1.10",
     "@types/google-libphonenumber": "^7.4.17",
     "@types/jsend": "^1.0.28",
-    "@types/jsonwebtoken": "^7.2.8",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.14",
+    "@types/jsonwebtoken": "^8.3.8",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.9.1",
     "@types/node-telegram-bot-api": "^0.28.4",
-    "@types/request-promise": "^4.1.45",
     "@types/request-promise-native": "^1.0.17",
-    "@types/rsmq": "^0.3.27",
-    "@types/sequelize": "^4.28.8",
+    "@types/rsmq": "^0.8.4",
     "@types/supertest": "^2.0.8",
+    "@types/validator": "^12.0.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "dotenv": "^6.2.0",
+    "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^5.2.0",
-    "supertest": "^3.4.2",
-    "typedoc": "^0.9.0",
-    "typescript": "^3.7.2"
+    "mocha": "^7.1.0",
+    "supertest": "^4.0.2",
+    "typedoc": "^0.17.0",
+    "typescript": "^3.8.3"
   },
   "repository": {
     "type": "git",
