--- a/package.json
+++ b/package.json
@@ -17,17 +17,15 @@
   "dependencies": {
     "auth0": "^2.24.0",
     "axios": "^0.19.2",
-    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "esendex": "^0.1.8",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.1",
     "express-jwt-authz": "^2.3.1",
     "express-xml-bodyparser": "^0.3.0",
-    "google-libphonenumber": "^3.2.7",
+    "google-libphonenumber": "^3.2.8",
     "jose": "^1.25.0",
-    "jsend": "^1.1.0",
+    "json-api-serializer": "^2.3.0",
     "jwks-rsa": "^1.7.0",
     "mysql2": "^2.1.0",
     "rsmq": "^0.12.0",
@@ -39,7 +37,7 @@
   },
   "description": "A plugin-oriented mass text communication system",
   "devDependencies": {
-    "@types/auth0": "^2.20.0",
+    "@types/auth0": "^2.20.1",
     "@types/auth0-js": "^9.12.4",
     "@types/bluebird": "^3.5.30",
     "@types/chai": "^4.2.11",
@@ -49,10 +47,9 @@
     "@types/express": "^4.17.3",
     "@types/faker": "^4.1.10",
     "@types/google-libphonenumber": "^7.4.17",
-    "@types/jsend": "^1.0.28",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.9.1",
+    "@types/node": "^13.9.3",
     "@types/node-telegram-bot-api": "^0.28.4",
     "@types/request-promise-native": "^1.0.17",
     "@types/rsmq": "^0.8.4",
@@ -63,9 +60,9 @@
     "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^7.1.0",
+    "mocha": "^7.1.1",
     "supertest": "^4.0.2",
-    "typedoc": "^0.17.0",
+    "typedoc": "^0.17.3",
     "typescript": "^3.8.3"
   },
   "repository": {
