--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -42,8 +42,8 @@ test_task:
     - tsc
 
   test_script:
-    - mysql -uroot -ppa55w0rd -P3306 -hlocalhost -e "CREATE DATABASE voluble_test;"
-    - mysql -uroot -ppa55w0rd -P3306 -hlocalhost -e "CREATE USER voluble_test@localhost IDENTIFIED BY 'volubletest';"
-    - mysql -uroot -ppa55w0rd -P3306 -hlocalhost -e "GRANT ALL PRIVILEGES ON voluble_test.* TO 'voluble_test'@'localhost';"
-    - mysql -uroot -ppa55w0rd -P3306 -hlocalhost -e "FLUSH PRIVILEGES;"
+    - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "CREATE DATABASE voluble_test;"
+    - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "CREATE USER voluble_test@localhost IDENTIFIED BY 'volubletest';"
+    - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "GRANT ALL PRIVILEGES ON voluble_test.* TO 'voluble_test'@'localhost';"
+    - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "FLUSH PRIVILEGES;"
     - npm test
