--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -43,7 +43,7 @@ test_task:
 
   test_script:
     - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "CREATE DATABASE voluble_test;"
-    - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "CREATE USER voluble_test@localhost IDENTIFIED BY 'volubletest';"
+    - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "CREATE USER voluble_test@localhost IDENTIFIED WITH mysql_native_password BY 'volubletest';"
     - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "GRANT ALL PRIVILEGES ON voluble_test.* TO 'voluble_test'@'localhost';"
     - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "FLUSH PRIVILEGES;"
     - npm test
