--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -41,9 +41,10 @@ test_task:
     - tsc -v;
     - tsc
 
-  test_script:
+  mysql_setup_script:
     - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "CREATE DATABASE voluble_test;"
     - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "CREATE USER voluble_test@127.0.0.1 IDENTIFIED BY 'volubletest';"
     - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "GRANT ALL PRIVILEGES ON voluble_test.* TO 'voluble_test'@'127.0.0.1';"
     - mysql -uroot -ppa55w0rd -P3306 -h127.0.0.1 -e "FLUSH PRIVILEGES;"
-    - npm test
+
+  test_script: npm test
