Separate users from user_self; use stricter params validation for limit; update npm

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "postinstall": "tsc -v ; tsc",
     "test-tap": "mocha dist/test --exit --reporter tap",
     "test": "mocha dist/test --exit --full-trace --bail --timeout=20000",
-    "start-server": "node ./dist/server/index.js",
+    "start-server": "node --trace-warnings ./dist/server/index.js",
     "start-worker": "node ./dist/worker/worker-main.js"
   },
   "dependencies": {
-    "auth0": "^2.24.0",
+    "auth0": "^2.25.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -23,13 +23,14 @@
     "express": "^4.17.1",
     "express-jwt-authz": "^2.3.1",
     "express-xml-bodyparser": "^0.3.0",
-    "google-libphonenumber": "^3.2.8",
-    "jose": "^1.25.0",
-    "json-api-serializer": "^2.3.0",
-    "jwks-rsa": "^1.7.0",
+    "generate-password": "^1.5.1",
+    "google-libphonenumber": "^3.2.10",
+    "jose": "^1.27.0",
+    "json-api-serializer": "^2.4.2",
+    "jwks-rsa": "^1.8.0",
     "mysql2": "^2.1.0",
-    "rsmq": "^0.12.0",
-    "sequelize": "^5.21.5",
+    "rsmq": "^0.12.2",
+    "sequelize": "^5.21.11",
     "telegram-mtproto": "^1.0.5",
     "validator": "^12.2.0",
     "voluble-common": "git+https://github.com/crewtext/voluble-common.git",
@@ -37,33 +38,33 @@
   },
   "description": "A plugin-oriented mass text communication system",
   "devDependencies": {
-    "@types/auth0": "^2.20.2",
-    "@types/auth0-js": "^9.12.4",
-    "@types/bluebird": "^3.5.30",
+    "@types/auth0": "^2.20.5",
+    "@types/auth0-js": "^9.13.1",
+    "@types/bluebird": "^3.5.32",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.4",
-    "@types/faker": "^4.1.11",
-    "@types/google-libphonenumber": "^7.4.17",
-    "@types/jsonwebtoken": "^8.3.8",
+    "@types/express": "^4.17.6",
+    "@types/faker": "^4.1.12",
+    "@types/google-libphonenumber": "^7.4.18",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.11.0",
+    "@types/node": "^13.13.9",
     "@types/node-telegram-bot-api": "^0.28.4",
     "@types/request-promise-native": "^1.0.17",
     "@types/rsmq": "^0.8.4",
-    "@types/supertest": "^2.0.8",
+    "@types/supertest": "^2.0.9",
     "@types/validator": "^12.0.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^7.1.1",
+    "mocha": "^7.2.0",
     "supertest": "^4.0.2",
-    "typedoc": "^0.17.3",
-    "typescript": "^3.8.3"
+    "typedoc": "^0.17.7",
+    "typescript": "^3.9.3"
   },
   "repository": {
     "type": "git",
