--- a/package.json
+++ b/package.json
@@ -56,9 +56,13 @@
     "@types/rsmq": "^0.8.4",
     "@types/supertest": "^2.0.9",
     "@types/validator": "^12.0.1",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.2.0",
+    "eslint": "^7.1.0",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^7.2.0",
