--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "start-server": "node --trace-warnings ./dist/server/index.js",
     "start-worker": "node ./dist/worker/worker-main.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx eslint ./src/**/* --ext .js,.ts --fix"
+    }
+  },
   "dependencies": {
     "auth0": "^2.25.1",
     "axios": "^0.19.2",
@@ -64,6 +69,7 @@
     "eslint": "^7.1.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "faker": "^4.1.0",
+    "husky": "^4.2.5",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^7.2.0",
     "supertest": "^4.0.2",
