--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "node ./dist/server/index.js",
+    "dev": "nodemon ./dist/server/index.js",
     "postinstall": "tsc -v ; tsc",
     "test-tap": "mocha dist/test --exit --reporter tap",
     "test": "mocha dist/test --exit --full-trace --bail --timeout=20000",
@@ -20,61 +21,62 @@
     }
   },
   "dependencies": {
-    "auth0": "^2.25.1",
-    "axios": "^0.19.2",
+    "auth0": "^2.28.0",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "esendex": "^0.1.8",
     "express": "^4.17.1",
-    "express-jwt-authz": "^2.3.1",
+    "express-jwt-authz": "^2.4.1",
     "express-xml-bodyparser": "^0.3.0",
     "generate-password": "^1.5.1",
-    "google-libphonenumber": "^3.2.10",
-    "jose": "^1.27.0",
-    "json-api-serializer": "^2.4.2",
-    "jwks-rsa": "^1.8.0",
+    "google-libphonenumber": "^3.2.12",
+    "jose": "^1.28.0",
+    "json-api-serializer": "^2.6.0",
+    "jwks-rsa": "^1.9.0",
     "mysql2": "^2.1.0",
     "rsmq": "^0.12.2",
-    "sequelize": "^5.21.11",
+    "sequelize": "^5.22.3",
     "telegram-mtproto": "^1.0.5",
-    "validator": "^12.2.0",
+    "validator": "^13.1.1",
     "voluble-common": "git+https://github.com/crewtext/voluble-common.git",
-    "winston": "^3.2.1"
+    "winston": "^3.3.3"
   },
   "description": "A plugin-oriented mass text communication system",
   "devDependencies": {
     "@types/auth0": "^2.20.5",
-    "@types/auth0-js": "^9.13.1",
+    "@types/auth0-js": "^9.13.4",
     "@types/bluebird": "^3.5.32",
-    "@types/chai": "^4.2.11",
-    "@types/chai-as-promised": "^7.1.2",
-    "@types/cors": "^2.8.6",
+    "@types/chai": "^4.2.12",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.6",
+    "@types/express": "^4.17.7",
     "@types/faker": "^4.1.12",
-    "@types/google-libphonenumber": "^7.4.18",
+    "@types/google-libphonenumber": "^7.4.19",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.13.9",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.6.2",
     "@types/node-telegram-bot-api": "^0.28.4",
     "@types/request-promise-native": "^1.0.17",
     "@types/rsmq": "^0.8.4",
-    "@types/supertest": "^2.0.9",
-    "@types/validator": "^12.0.1",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
+    "@types/supertest": "^2.0.10",
+    "@types/validator": "^13.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.2.0",
-    "eslint": "^7.1.0",
+    "eslint": "^7.7.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
-    "faker": "^4.1.0",
+    "faker": "^5.1.0",
     "husky": "^4.2.5",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^7.2.0",
+    "mocha": "^8.1.3",
+    "nodemon": "^2.0.4",
     "supertest": "^4.0.2",
-    "typedoc": "^0.17.7",
-    "typescript": "^3.9.3"
+    "typedoc": "^0.19.0",
+    "typescript": "^4.0.2"
   },
   "repository": {
     "type": "git",
