--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test-tap": "mocha dist/test --exit --reporter tap",
     "test": "mocha dist/test --exit --full-trace --bail --timeout=20000",
     "start-server": "node --trace-warnings ./dist/server/index.js",
-    "start-worker": "node ./dist/worker/worker-main.js"
+    "start-worker": "node ./dist/worker/worker-main.js",
+    "lint": "npx eslint ./src/**/* --ext .js,.ts --ignore-pattern src/test/* --fix"
   },
   "husky": {
     "hooks": {
@@ -40,6 +41,7 @@
     "telegram-mtproto": "^1.0.5",
     "validator": "^13.1.1",
     "voluble-common": "git+https://github.com/crewtext/voluble-common.git",
+    "voluble-plugin-base": "git+https://github.com/CrewText/voluble-plugin-base.git",
     "winston": "^3.3.3"
   },
   "description": "A plugin-oriented mass text communication system",
@@ -67,7 +69,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.2.0",
-    "eslint": "^7.7.0",
+    "eslint": "^7.8.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "faker": "^5.1.0",
     "husky": "^4.2.5",
