--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -37,8 +37,11 @@ test_task:
     folder: node_modules
     fingerprint_script: cat package-lock.json
     populate_script:
-      - sed -i "s/git+https:\/\/github\.com\/CrewText/git+https:\/\/${GIT_ACCESS_TOKEN}:x-oauth-basic@github\.com\/CrewText/g" package.json
+      - cp package-lock.json cp package-lock.json.bkp
+      - sed -i "s/git+https:\/\/github\.com\/CrewText/git+https:\/\/${GIT_ACCESS_TOKEN}:x-oauth-basic@github\.com\/CrewText/g" package-lock.json
       - npm ci
+      - rm package-lock.json
+      - cp package-lock.json.bkp package-lock.json
 
   build_script:
     - tsc -v;
